resolves correctly, missing magic number database

--- a/magic/BUILD.bazel
+++ b/magic/BUILD.bazel
@@ -3,7 +3,7 @@ py_library(
     srcs = ["loader.py", "__init__.py"],
     imports = [".."],
     data = [
-        "@libmagic//:libmagic",
+        "//:libmagic",
     ],
     visibility = ["//visibility:public"],
 )
