workaround to bundle dynamic shared object files of libmagic inside the repo

--- a/magic/BUILD.bazel
+++ b/magic/BUILD.bazel
@@ -2,9 +2,10 @@ py_library(
     name = "loader",
     srcs = ["loader.py", "__init__.py"],
     imports = [".."],
-    data = [
-        "//:libmagic",
-    ],
+    data = select({
+        "@platforms//os:linux": ["//:libmagic_linux"],
+	"@platforms//os:osx": ["@libmagic_macos//:libmagic"],
+    }),
     visibility = ["//visibility:public"],
 )
 
